# CLRS

./: RST_PROLOG.rst  book.toml  checkascii.py  conf.py  custom.css  index.rst  preamble.sty  string_match.py  tox.ini
_build/doctrees/: RST_PROLOG.doctree  environment.pickle  index.doctree
_build/latex/: clrs.aux  clrs.fdb_latexmk  clrs.fls  clrs.out  clrs.tex  clrs.toc  preamble.sty
_ext/: clrsext.py
appx1/ch36/: index.rst
appx1/ch37/: index.rst  sec1.rst
archive/: .gitignore  clean.sh  conf.py  index.rst  tox.ini
archive/_ext/: clrsext.py
archive/old/: preface.rst
intro2algo/: .gitignore  SUMMARY.rst  setup.cfg  tox.ini
intro2algo/docs/: conf.py  index.rst  preface.rst
intro2algo/docs/part1/: index.rst
intro2algo/docs/part1/ch1/: index.rst
intro2algo/src/intro2algo/: __init__.py
intro2algo/src/intro2algo/struct/tree/: bst.py
old/: README.rst  index.rst  mystyle.sty  rst_prolog.rst
old/appx1/: index.rst
old/part1/: index.rst
part0/: index.rst
part1/ch2/: index.rst  problems.rst
part1/ch3/: index.rst
part1/ch4/: index.rst
part1/ch5/: index.rst
part2/: index.rst
part2/ch6/: index.rst
part3/ch11/: index.rst
part3/elementary/: index.rst
part4/ch17/: aggregate.rst  dynamic-table.rst
part4/greedy/: asp.rst  elements.rst  huffman.rst
part6/: index.rst
part6/ch23/: index.rst
part6/ch26/: index.rst
part7/: index.rst
part7/ch27/: index.rst
part7/ch31/: index.rst
part7/ch32/: index.rst  sec1.rst  sec2.rst
src/: SUMMARY.md  appx-a-00-summations.md  appx-a-01-summations-formula-and-properties.md
(+38 files in other folders)
