[metadata]
name = intro2algo
version = attr: intro2algo.__version__
description = file: SUMMARY.rst
long_description = file: README.rst
author = Thomas H. Cormen, Charles E. Leiserson, Ronald L. Rivest, Clifford Stein
url = https://mitpress.mit.edu/books/introduction-algorithms-third-edition

[options]
packages = find:
package_dir =
    =src

[options.packages.find]
where = src
